# canopus

./: .gitignore  README.md  package.json  rollup.config.js  stylint.config.js
.github/workflows/: release.yml
src/: App.svelte  main.ts  timer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/partials/: alert-error.svelte  alert-success.svelte  device-size.svelte  footer.svelte  main.svelte  navbar.svelte  pagetitle.svelte  sitecard.svelte
