[package]
name = "canopus"
version = "0.1.0"
description = "Canopus - Desktop Site Manager For Hugo Sites"
authors = [ "goldcoders" ]
license = "MIT"
repository = "https://goldcoders/canopus"
default-run = "canopus"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "canopus"
path = "src/main.rs"
